<resources>
    <string name="app_name">semana1</string>
    <string name="avatar">TODO</string>
    <string name="bienvenido_a">Bienvenido(a)</string>
    <string name="loginimg">TODO</string>
    <string name="usuarioimg">TODO</string>
    <string name="inicio">inicio</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="iniciobtn">INICIO</string>
    <string name="newUser">¿Eres nuevo(a)? Registrate aquí</string>
    <string name="resPassword">¿Olvidaste tu contraseña?</string>
    <string name="iniciarsesion">Inicia sesión para continuar</string>
    <string name="bienvenido">Bienvenido,</string>
    <string name="confirmar_password">Confirmar password</string>
    <string name="registrate_para_empezar">Registrate para empezar</string>
    <string name="password1">Password</string>
    <string name="email">Email</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="registrar">REGISTRAR</string>
    <string name="ya_tienes_una_cuenta_inicia_sesi_n">Ya tienes una cuenta? Inicia sesión</string>
    <string name="newUserimg">TODO</string>
    <string name="emailUser">Email</string>
    <string name="passwordUser">Password</string>
    <string name="inicioBtn">INICIO</string>
    <string name="todo1">TODO</string>
    <string name="olvidaste_tu_contrase_a">Olvidaste tu contraseña?</string>
    <string name="eres_nuevo_registrate">Eres nuevo? Registrate</string>
    <string name="imageuser">TODO</string>
    <string name="consultar">CONSULTAR</string>
    <string name="numero_de_documento">Numero de documento</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="usuName">TextView</string>
    <string name="bienvenidos">Bienvenido(a)</string>
    <string name="eliminar">Eliminar</string>
    <string name="numero_de_documento1">numero de documento</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar_datos">Consultar datos</string>
</resources>